# ai-email-triage

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ai-email-triage-plan.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
dashboard/: app.py
data/: batch_results.json  sample_emails.json  seed.py
docs/: api_reference.md  architecture.md  design_decisions.md  evaluation_report.md  interview_guide.md
eval/: eval_results.json  evaluate.py  golden_dataset.json
monitoring/: prometheus.yml
src/agents/: __init__.py  classifier.py  draft_generator.py  prioritizer.py  reviewer.py  sentiment.py
src/api/: auth.py  main.py  metrics.py  middleware.py  routes.py
src/db/: database.py  repository.py
src/graph/: edges.py  nodes.py  state.py  workflow.py
src/models/: api.py  email.py  result.py
src/prompts/: classifier.txt  draft_generator.txt  prioritizer.txt  reviewer.txt  sentiment.txt
src/utils/: callbacks.py  config.py  llm.py  logger.py
tests/: conftest.py  test_api.py  test_classifier.py  test_prioritizer.py  test_workflow.py
